fix(chat): add message too long feedback

--- a/src/frontend/static/style/components/Chat/ChatRoomBottomBar.css
+++ b/src/frontend/static/style/components/Chat/ChatRoomBottomBar.css
@@ -35,3 +35,10 @@ chatroom-bottom-bar {
 	font-size: 2.6rem;
 	color: lightgray;
 }
+
+#chatErrorFeedback {
+	color: red;
+	font-size: 2rem;
+	font-weight: 400;
+	transform: translateY(-10%);
+}
